<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">借教材</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_person">账户</string>
    <string name="title_section1">计算机</string>
    <string name="title_section2">建筑</string>
    <string name="title_section3">文学艺术</string>
	<string name="title_section4">医学</string>
	<string name="title_section5">经济管理</string>
	<string name="title_section6">社会科学</string>
	
	<string name="home">主页</string>
	<string name="publish">发布教材</string>
	<string name="friends">社区</string>
	
	<string name="book_name">&#160;&#160;&#160;&#160;书名</string>
	<string name="author_name">&#160;&#160;&#160;&#160;作者</string>
	<string name="publish_name">出版社</string>
	<string name="book_type">&#160;&#160;&#160;&#160;类别</string>
	<string name="book_brief">&#160;&#160;&#160;&#160;简介</string>
	<string name="upload_photo">上传封面</string>
	
	<string name="book_name_hint">输入教材名称</string>
	<string name="book_author_hint">输入作者姓名</string>
	<string name="book_publish_hint">输入出版社名称</string>
	<string name="book_brief_hint">输入教材简介</string>
	<string name="take_photo">拍照</string>
	<string name="photo">封面</string>
	<string name="commit">发布</string>
	
	<string name="chat_type">分类</string>
	<string name="user_avater">头像</string>
	
	<string name="search_hint">输入书名</string>
	<string name="book_image">教材封面</string>
	
	<string name="contact_owner">联系方式</string>
	<string name="send_chat">发送</string>
	<string name="chat_hint">输入私信</string>
	
	<string name="search_inside">校内搜索</string>
	<string name="search_outside">全局搜索</string>
	
	<string name="comment_hint">写下你的评论</string>
	<string name="send_comment">评论</string>
	<string name="user_name">用户名</string>
	
	<string name="my_book">我的教材</string>
	<string name="my_record">借阅记录</string>
	<string name="my_friends">我的好友</string>
	<string name="my_letter">我的私信</string>
	<string name="me">我</string>
	
	<string name="login_user_name">用户名</string>
	<string name="login_password">密码</string>
	<string name="login_remember">记住密码</string>	
	<string name="login_auto">自动登录</string>
	<string name="login">登录</string>
	<string name="user_name_hint">输入用户名</string>
	<string name="user_password_hint">输入密码</string>
	<string name="action_logout">注销账户</string>
	<string name="action_close">关闭</string>
	
	<string name="action_register">注册</string>
	<string name="register_user_email">邮箱</string>
	<string name="register_user_email_hint">输入邮箱</string>
	<string name="register_user_repeate_password">重复密码</string>
	<string name="register_user_repeate_password_hint">再次输入密码</string>
</resources>
