<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <!-- 书名  -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText 
            android:id="@+id/book_name_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/book_name_hint" />
    </LinearLayout>
    
    <!-- 作者名  -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText 
            android:id="@+id/book_author_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/book_author_hint" />
    </LinearLayout>
    
    <!-- 出版社名  -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText 
            android:id="@+id/book_publish_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/book_name_hint" />
     </LinearLayout>
    
     <!-- 分类 -->     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Spinner 
            android:id="@+id/book_type"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <!-- 书的简介 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_brief"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText 
            android:id="@+id/book_brief_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:background="@drawable/edit_shape"
            android:hint="@string/book_brief_hint" />
    </LinearLayout>
    
    <!-- 上传封面 -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button 
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_take_photo" />
        <ImageView 
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo"/>
    </LinearLayout>
    <!-- 发布 -->
     <Button 
         android:id="@+id/commit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:layout_gravity="center"
         android:text="@string/commit"
         android:textAppearance="?android:attr/textAppearanceMedium" 
         android:background="@drawable/button"/>
  </LinearLayout>
</ScrollView>