<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
 	 <!-- 显示内容 -->
 	 <FrameLayout
 	     android:id="@+id/main_content"
 	     android:layout_height="0dp"
 	     android:layout_weight="1"
 	     android:layout_width="match_parent" /> 
 	     
 	 <!-- 底部按钮 -->   
 	 <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:background="#00000000"
        android:orientation="horizontal" >
 
        <RadioButton
            android:id="@+id/home_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/ic_home"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/home" />

       <RadioButton
            android:id="@+id/person_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
           
            android:button="@null"
            android:drawableTop="@drawable/ic_person"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/me" />
       
        <RadioButton
            android:id="@+id/friend_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"

            android:button="@null"
            android:drawableTop="@drawable/ic_friends"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/friends" />
        
 
 


    </RadioGroup>
</LinearLayout>
